--- a/crud/package.json
+++ b/crud/package.json
@@ -15,10 +15,17 @@
     "@angular/common": "~8.2.7",
     "@angular/compiler": "~8.2.7",
     "@angular/core": "~8.2.7",
+    "@angular/fire": "^5.2.1",
     "@angular/forms": "~8.2.7",
     "@angular/platform-browser": "~8.2.7",
     "@angular/platform-browser-dynamic": "~8.2.7",
     "@angular/router": "~8.2.7",
+    "bootstrap": "^4.3.1",
+    "firebase": "^7.2.0",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.4.1",
+    "ngx-spinner": "^8.0.3",
+    "popper.js": "^1.15.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
